fixed alignment issue on main content

--- a/src/app/rules/rules.component.scss
+++ b/src/app/rules/rules.component.scss
@@ -3,7 +3,7 @@ main {
   height: calc( 100vh - 170px );
   .content {
     max-width: 1000px;
-    top: 20%;
+    top: 25%;
     position: relative;
     h2 {
       margin-bottom: 40px;
